# electrochem-sim

./: .enclii.yml  .env.example  .env.template  .gitignore  API_SPEC.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  Dockerfile.worker  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SECURITY_FIXES.md  SOFTWARE_SPEC.md  VISUALIZATION_API.yaml  VISUALIZATION_IMPLEMENTATION_ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/hooks/: useSimulationData.ts  useWebSocket.ts
docs/: INDEX.md
docs/architecture/: IMPLEMENTATION_GUIDE.md  SYSTEM_DESIGN.md
docs/reports/: SECURITY_FIXES.md  SECURITY_SOLUTIONS.md
docs/visualization/: 3D_VISUALIZATION_SETUP.md  VISUALIZATION_ARCHITECTURE.md
examples/: run_demo.py
examples/scenarios/: ni_plating_mvp.yaml
infra/compose/: docker-compose.dev.yml
scripts/: generate_secrets.py  setup_database.py
services/api/: alembic.ini  auth.py  auth_service.py  config.py  database.py  exceptions.py  janua_auth.py  logging_config.py  main.py  main_fixed.py  metrics.py  middleware.py  models.py
services/api/alembic/: env.py
services/api/clients/: __init__.py  hal.py
services/hal/: __init__.py  main.py  registry.py  safety.py
services/hal/drivers/: base.py  (+2 more)
tests/: conftest.py  test_auth.py  test_models.py
tests/integration/: __init__.py  test_full_loop.py
workers/sim-fenicsx/: simple_solver.py
(+15 files in other folders)
